--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
-    "name": "Hello Extensions",
-    "description": "Base Level Extension",
+    "name": "TruthScope",
+    "description": "Base Image Verifying Extension",
     "version": "1.0",
     "manifest_version": 3,
     "action": {
-      "default_popup": "main.html",
+      "default_popup": "frontEnd.html",
       "default_icon": "icon.png"
     },
     "permissions": ["scripting", "activeTab"],
